--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
 	position: relative;
 	margin: 0 auto;
 	padding: 0;
-	top: 10px;
+	top: 13px;
 	bottom: 0;
 	right: 0;
 	left: 0;
@@ -17,6 +17,8 @@
 
 #header-left{
 	position: absolute;
+	width: 450px;
+	height: 50px;
 }
 
 #icono-medium{
@@ -39,6 +41,11 @@
 #barra-vertical{
 	position: absolute;
 	top: 0;
+	left: 55px;
+	font-size: 28px;
+	color: #7A7A7A;
+	font-weight: 100;
+	font-family: 'Roboto', sans-serif;
 }
 
 #img-cabecera{
@@ -46,15 +53,40 @@
 	width: 95px;
 	height: 37px;
 	top: 0;
-	left: 36px;
+	left: 83px;
+}
+
+#followers{
+	width: 106px;
+	height: 22px;
+	border-radius: 18px;
+	position: absolute;
+	top: 7px;
+	left: 200px;
+	background-color: #02B875;
+	color: white;
+}
+
+#followers p{
+	font-family: 'Open Sans', sans-serif;
+	position: absolute;
+	top: 0;
+	left: 10px;
+	font-size: 0.9rem;
+}
+
+.icon-chevron-thin-down{
+	position: absolute;
+	top: 4px;
+	left: 81px;
 }
 
 #iconos-redes-sociales{
 	position: absolute;
-	top: 13px;
-	left: 150px;
+	top: 8px;
+	left: 324px;
 	font-size: 20px;
-	color: rgba(0,0,0,.6);
+	color: #7A7A7A;
 }
 
 .icon-twitter{
@@ -66,38 +98,48 @@
 	left: 35px;
 }
 
-#header-rigth{
+#header-right{
 	position: absolute;
 	top: 0;
 	right: 0;
+	width: 130px;
+	height: 50px;
 }
 
-.edit{
+#iconos-right{
 	position: absolute;
+	top: 5px;
+	right: 55px;
+	font-size: 18px;
+	color: #7A7A7A;
 }
 
-.icon-Seach{
+.icon-Search{
 	position: absolute;
+	right: 40px;
 }
 
-#circulo-verde{
+.icon-notification{
+	position: absolute;
+	right: 0px;
+}
+
+#me{
 	position: absolute;
 	width: 30px;
 	height: 30px;
 	border-radius: 30px;
 	background-color: #02B875;
-}
-
-.icon-notification{
-
+	top: 0;
+	right: 0;
 }
 
 #general-body{
 	position: relative;
-	width: 740px;
+	width: 700px;
 	margin: 0 auto;
 	padding: 0;
-	top: 30px;
+	top: 45px;
 	bottom: 0;
 	right: 0;
 	left: 0;
@@ -145,8 +187,9 @@
 
 #follow p{
 	position: absolute;
-	top: -2.5px;
-	left: 8px;
+	top: -2.4px;
+	left: 10px;
+	font-size: 0.9rem
 }
 
 #body-page{
@@ -154,14 +197,15 @@
 }
 
 h1{
-	font-size: 2.5rem;
+	font-size: 2.4rem;
 	line-height: 2.5rem;
 }
 
-#body{
-	font-size: 1.2rem;
-	line-height: 1.9rem;
+.body{
+	font-size: 1.4rem;
+	line-height: 2rem;
 	padding: 30px 0 0 0;
+	font-family: 'Cambria', serif;
 }
 
 hr{
